--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "@remix-run/react": "^1.6.8",
     "@remix-run/serve": "^1.6.8",
     "@remix-run/server-runtime": "^1.6.8",
+    "@typescript-eslint/eslint-plugin": "^5.35.0",
+    "@typescript-eslint/parser": "^5.35.0",
     "bcryptjs": "^2.4.3",
+    "eslint-plugin-prettier": "^4.2.1",
     "isbot": "^3.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -68,7 +71,7 @@
     "msw": "^0.44.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.16",
-    "prettier": "2.7.1",
+    "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "prisma": "^4.2.1",
     "start-server-and-test": "^1.14.0",
