--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@typescript-eslint/parser": "^5.35.0",
     "bcryptjs": "^2.4.3",
     "isbot": "^3.5.0",
+    "marked": "^4.0.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tiny-invariant": "^1.2.0"
@@ -53,6 +54,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/eslint": "^8.4.5",
+    "@types/marked": "^4.0.6",
     "@types/node": "^18.7.4",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
