--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "@remix-run/react": "^1.6.8",
     "@remix-run/serve": "^1.6.8",
     "@remix-run/server-runtime": "^1.6.8",
+    "@tailwindcss/typography": "^0.5.4",
     "@typescript-eslint/eslint-plugin": "^5.35.0",
     "@typescript-eslint/parser": "^5.35.0",
     "bcryptjs": "^2.4.3",
+    "daisyui": "^2.24.0",
     "isbot": "^3.5.0",
     "marked": "^4.0.19",
     "react": "^18.2.0",
