--- a/render.yaml
+++ b/render.yaml
@@ -13,7 +13,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: remixdb
+          name: prwdigital
           property: connectionString
       - key: SESSION_SECRET
         generateValue: true
