--- a/package.json
+++ b/package.json
@@ -43,7 +43,11 @@
     "marked": "^4.0.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tiny-invariant": "^1.2.0"
+    "react-hook-form": "^7.34.2",
+    "remix-domains": "^0.3.2",
+    "remix-forms": "^0.17.4-test.0",
+    "tiny-invariant": "^1.2.0",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.4.0",
