--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@remix-run/react": "^1.6.8",
     "@remix-run/serve": "^1.6.8",
     "@remix-run/server-runtime": "^1.6.8",
+    "@remix-validated-form/with-zod": "^2.0.1",
     "@tailwindcss/typography": "^0.5.4",
     "@typescript-eslint/eslint-plugin": "^5.35.0",
     "@typescript-eslint/parser": "^5.35.0",
@@ -46,6 +47,7 @@
     "react-hook-form": "^7.34.2",
     "remix-domains": "^0.3.2",
     "remix-forms": "^0.17.4-test.0",
+    "remix-validated-form": "^4.5.5",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
