--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "remix-domains": "^0.3.2",
     "remix-forms": "^0.17.4-test.0",
     "remix-validated-form": "^4.5.5",
-    "tiny-invariant": "^1.2.0"
+    "tiny-invariant": "^1.2.0",
+    "zod": "^3.18.0",
+    "zod-form-data": "^1.2.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.4.0",
