--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev"
+    "build": "npm run build:css && remix build",
+    "build:css": "tailwindcss -m -i ./styles/tailwind.css -o app/styles/tailwind.css",
+    "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
+    "dev:css": "tailwindcss -w -i ./styles/tailwind.css -o app/styles/tailwind.css"
   },
   "dependencies": {
     "@prisma/client": "^4.3.0",
@@ -16,8 +18,7 @@
     "daisyui": "^2.24.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "supabase": "^1.3.0",
-    "tailwindcss": "^3.1.8"
+    "supabase": "^1.3.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.7.0",
@@ -25,8 +26,12 @@
     "@remix-run/serve": "^1.7.0",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "autoprefixer": "^10.4.8",
+    "concurrently": "^7.3.0",
     "eslint": "^8.20.0",
+    "postcss": "^8.4.16",
     "prisma": "^4.3.0",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4"
   },
   "engines": {
