--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
+  "name": "prw-digital-v3",
   "private": true,
   "sideEffects": false,
   "scripts": {
+    "start": "remix-serve build",
     "build": "npm run build:css && remix build",
     "build:css": "tailwindcss -m -i ./styles/tailwind.css -o app/styles/tailwind.css",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
-    "dev:css": "tailwindcss -w -i ./styles/tailwind.css -o app/styles/tailwind.css"
+    "dev:css": "tailwindcss -w -i ./styles/tailwind.css -o app/styles/tailwind.css",
+    "postinstall": "remix setup node",
+    "format": "prettier --write ."
   },
+  "eslintIgnore": [
+    "/node_modules",
+    "/build",
+    "/public/build"
+  ],
   "dependencies": {
     "@prisma/client": "^4.3.0",
     "@remix-run/node": "^1.7.0",
