--- a/package.json
+++ b/package.json
@@ -24,15 +24,22 @@
     "@supabase/supabase-js": "^1.35.6",
     "@tailwindcss/typography": "^0.5.4",
     "@vercel/node": "^2.4.4",
+    "cors": "^2.8.5",
     "daisyui": "^2.24.0",
+    "nodemailer": "^6.7.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "supabase": "^1.3.0"
+    "react-hook-form": "^7.35.0",
+    "remix-domains": "^0.3.2",
+    "remix-forms": "^0.17.4-test.0",
+    "supabase": "^1.3.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.7.0",
     "@remix-run/eslint-config": "^1.7.0",
     "@remix-run/serve": "^1.7.0",
+    "@types/nodemailer": "^6.4.5",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.8",
