--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-_criteria
-_img
-_db
-_in-progress
+/_criteria
+/_img
+/_db
+/_in-progress
 
 node_modules
 
@@ -17,3 +17,4 @@ node_modules
 /prisma/prwdigital.db-journal
 
 /app/styles/tailwind.css
+.vercel
